kind/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 30100
  selector:
    app.kubernetes.io/name: nginx-deployment
  type: NodePort
