kind/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30599
  selector:
    app: my-app
  type: NodePort
